--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,7 +10,6 @@ body {
         margin: 3rem 7rem;
         justify-content: center;
         align-items: center;
-        height: 80vh;
         padding: 5rem 5rem;
         text-align: left;
 
