--- a/less/navigation.less
+++ b/less/navigation.less
@@ -31,6 +31,7 @@ header {
                 letter-spacing: 2rem;
                 font-size: 2rem;
             }
+        
             a {
                 color: @lightgray;
                 text-decoration: none;
@@ -38,6 +39,7 @@ header {
                 @media @phone {
                     width: 100%;
                     text-align: center;
+
                 }
 
                     &:hover {
@@ -50,13 +52,38 @@ header {
             display: flex;
             justify-content: space-evenly;
             width: 35rem;
-            align-content: center;
             
+
+            a{
+                text-decoration: none;
+                margin: 2rem;
+                padding: 1rem;
+                width: 90rem;  
+                border: 2px solid @orange;
+                border-radius: 5px;
+                text-align: center;
+                font-size: 2.5rem;
+                color: @lightgray;
+                flex-wrap: wrap;
+                flex-direction: column;
+    
+                @media @phone {
+                    font-size: 1.5rem;
+                    font-weight: bold;
+                    margin: .5rem;
+                    padding: .7rem;
+                    width: 40rem;
+                    align-items: center;
+                }
+    
+                &:hover {
+                    color: @white;
+                }
+                }
 
             @media @phone {
                 flex-direction: column;
                 width: 100%;
-                align-items: center;
             }
 
             #login {
@@ -69,32 +96,6 @@ header {
                     color: @white;
                     
                 }
-            }
-
-            a{
-            text-decoration: none;
-            margin: 2rem;
-            padding: 1rem;
-            width: 90rem;  
-            border: 2px solid @orange;
-            border-radius: 5px;
-            text-align: center;
-            font-size: 2.5rem;
-            color: @lightgray;
-            flex-wrap: wrap;
-            flex-direction: column;
-
-            @media @phone {
-                font-size: 1.5rem;
-                font-weight: bold;
-                margin: .5rem;
-                padding: .7rem;
-                width: 40rem;
-            }
-
-            &:hover {
-                color: @white;
-            }
             }
        }
     }
