--- a/less/variables.less
+++ b/less/variables.less
@@ -9,4 +9,4 @@
 //mobile var
 @phone: ~"(max-width: 500px)";
 //tablet var
-@tablet: ~"(max-width: 750px)";
+@tablet: ~"(max-width: 800px)";
